# godelai-lite

./: .gitignore  GODELAI-Lite-Writeup.md  GodelAI-Lite-Writeup-Kaggle.md  GodelAI-Lite-Writeup.docx  NORTH-STAR.md  README.md  build_notebook_replay.py  build_notebook_sweep.py  godelai-lite-kaggle.ipynb  godelai-mem-sweep-v1.ipynb  kernel-metadata-replay.json  kernel-metadata.json  pyproject.toml  solve_exam.py
.macp/: agents.json  brief-qk-genesis-update.md  handoff-rk-session-001.md  handoff-rk-session-002.md  handoff-rk-session-003.md  handoff-rk-session-004.md  handoff-rk-session-005.md  handoff-rk-session-006.md  handoff-rk-session-007.md  handoff-rk-session-008.md  handoff-rk-session-009.md  handoff-rk-session-010.md  handoff-rk-session-011.md  handoff-rk-session-012.md
.qk/: Qk-genesis-prompt-v2.0.md
.qwen/: Qk-genesis-prompt-v1.0.md  Qk-genesis-prompt-v1.1.md
.rk/: Rk-genesis-prompt-v1.0.md  Rk-genesis-prompt-v1.1.md  Rk-genesis-prompt-v1.2.md  Rk-genesis-prompt-v1.3.md  Rk-genesis-prompt-v1.4.md  Rk-genesis-prompt-v1.5.md  Rk-genesis-prompt-v1.6.md  Rk-genesis-prompt-v1.7.md  Rk-genesis-prompt-v1.8.md
GodelAIReplay-Compute/: GodelAI Replay PermutedMNIST v1 (Done).txt  godelai-mem-sweep-v1.ipynb  godelai-replay-permutedmnist-v1 (Done).ipynb  godelai-replay-permutedmnist-v1.ipynb
kaggle-output/v2.2-new/: raw.json
kaggle-replay-kernel/: godelai-replay-permutedmnist-v1.ipynb  kernel-metadata.json
kaggle-runs/output-v214/: godelai_memory.json
kaggle-sweep-kernel/: kernel-metadata.json
mempalace/: __init__.py  agent.py  core.py  gifp.py  macp.py
(+26 files in other folders)
